UI: Fix scrollbars not showing in some cases
(integrated from master branch change 4f7fb8d by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/scrollbars.less
+++ b/src/chrome/komodo/skin/plat/shared/scrollbars.less
@@ -98,7 +98,7 @@ page:hover scrollbar:not([for="scintilla"]) { opacity: 1.0; }
 /* Mainly intended for commando result richlistbox, where we need to force
    scrollbar visibility manually because XUL flex and scrolling do not go well
    together */
-richlistbox:not(.scrollable) scrollbar
+richlistbox#commando-results:not(.scrollable) scrollbar
 {
     visibility: collapse;
 }
